apps/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-svc
  namespace: apps
  labels:
    app: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - name: http
      protocol: TCP
      port: 3456
      targetPort: 3456
