apps/vikunja/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja-ingressroute
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vikunja.macbytes.io`)
      kind: Rule
      services:
        - name: vikunja-svc
          port: 3456
  tls:
    secretName: vikunja-tls-certificate
